docs/4.22/nodes/scheduling/secondary_scheduler/nodes-secondary-scheduler-release-notes.md
Review the Secondary Scheduler Operator for Red Hat OpenShift release notes to track its development and learn what is new and changed with each release.

The Secondary Scheduler Operator allows you to deploy a custom secondary scheduler in your OpenShift Container Platform cluster.

For more information, see [About the Secondary Scheduler Operator](../../../nodes/scheduling/secondary_scheduler/index.xml#nodes-secondary-scheduler-about_nodes-secondary-scheduler-about).

# Release notes for Secondary Scheduler Operator for Red Hat OpenShift 1.6.0

Review the release notes for Secondary Scheduler Operator 1.6.0 to learn what is new and updated with this release.

Issued: 24 June 2026

The following advisory is available for the Secondary Scheduler Operator for Red Hat OpenShift 1.6.0:

- [RHBA-2026:28915](https://access.redhat.com/errata/RHBA-2026:28915)

## New features and enhancements

- You can now configure high availability for the Secondary Scheduler Operator, ensuring continuous pod scheduling for specialized workloads during scheduler pod failures or maintenance. High availability eliminates the secondary scheduler as a single point of failure in production environments.

  To enable high availability, set the topology mode to `HighlyAvailable` in the `SecondaryScheduler` custom resource (CR). In this mode, the Operator deploys multiple secondary scheduler replicas distributed across nodes, up to a configurable maximum. You can optionally set a node selector to target specific nodes or set tolerations for tainted nodes.

  For more information, see [Deploying a secondary scheduler](../../../nodes/scheduling/secondary_scheduler/nodes-secondary-scheduler-configuring.xml#nodes-secondary-scheduler-configuring-console_secondary-scheduler-configuring).

- The Secondary Scheduler Operator now publishes secondary scheduler metrics to Prometheus by default.

- This release of the Secondary Scheduler Operator updates the Kubernetes version to 1.35.

## Bug fixes

- This release of the Secondary Scheduler Operator addresses Common Vulnerabilities and Exposures (CVEs).

## Known issues

- Currently, you cannot deploy additional resources, such as config maps, CRDs, or RBAC policies through the Secondary Scheduler Operator. Any resources other than roles and role bindings that are required by your custom secondary scheduler must be applied externally. ([WRKLDS-645](https://issues.redhat.com/browse/WRKLDS-645))
